--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,12 +19,12 @@
                         <h3 class="text-center mb-4">Inicio de Sesión</h3>
                         <form id="login-form">
                             <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="username" placeholder="Username" required>
+                                <input type="text" class="form-control" id="username" placeholder="Username">
                                 <label for="username">Usuario</label>
                             </div>
                             <div class="form-floating mb-3">
                                 <input type="password" class="form-control" id="password" placeholder="Password"
-                                    required>
+                                    >
                                 <label for="password">Contraseña</label>
                             </div>
                             <button type="submit" class="btn btn-primary w-100">Ingresar</button>
