--- a/frontend/register.html
+++ b/frontend/register.html
@@ -19,15 +19,15 @@
                         <h3 class="text-center mb-4">Registro</h3>
                         <form id="login-form">
                             <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="username" placeholder="Username" required>
+                                <input type="text" class="form-control" id="username" placeholder="Username">
                                 <label for="username">Usuario</label>
                             </div>
                             <div class="form-floating mb-3">
-                                <input type="password" class="form-control" id="password" placeholder="Password"
-                                    required>
+                                <input type="password" class="form-control" id="password" placeholder="Password">
                                 <label for="password">Contraseña</label>
                             </div>
                             <button type="submit" class="btn btn-primary w-100">Ingresar</button>
+                            <p>Si ya tienes una cuenta <a href="index.html">Haz click aquí</a></p>
                         </form>
                         <p id="message" class="text-danger mt-3"></p>
                     </div>
